--- a/web-page-pi/css/style2.css
+++ b/web-page-pi/css/style2.css
@@ -17,9 +17,13 @@ p {
   justify-content: center;
 }
 
+.wip {
+  position: relative; bottom: 100px;
+}
+
 .container2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative; bottom: 200px;
+  position: relative; bottom: 300px;
 }
