--- a/css/style3.css
+++ b/css/style3.css
@@ -53,3 +53,9 @@ html, body {
   font-weight: bold;
   font-size: 20px;
 }
+
+@media screen and (max-width: 700px) {
+  .quote2 {
+    width: 35%;
+  }
+}
