--- a/css/style2.css
+++ b/css/style2.css
@@ -68,7 +68,7 @@ html, body {
   align-items: center;
   justify-content: center;
   grid-row-start: 2;
-  width: 50%;
+  width: 75%;
   height: auto;
   grid-gap: 8%;
   margin-top: 5%;
@@ -88,7 +88,6 @@ html, body {
 }
 
 .boxes {
-  display: grid;
   align-items: center;
   justify-content: center;
   padding: 1.2em;
@@ -99,8 +98,9 @@ html, body {
   border-radius: 24px;
   font-size: 18px;
   background-color: #fff;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-right: 20px;
+  width: 250px;
+  height: 150px;
 }
 
 .button-style {
