--- a/css/style3.css
+++ b/css/style3.css
@@ -89,3 +89,29 @@ html, body {
     width: 35%;
   }
 }
+
+.style-list {
+  font-size: 14px;
+  font: arial;
+  color: black;
+}
+
+li{
+  height: 30px;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
