atualização background-color

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   background-color: #fff;
 }
 
-.bkg{background-image: linear-gradient(to bottom, #3bdf7f, #58eb95);
+.bkg{background-image: linear-gradient(to bottom, #7DCE94, #a1f1b8);
   
 }
 
