--- a/css/style3.css
+++ b/css/style3.css
@@ -3,8 +3,9 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: arial;
-  background-color: #7dce94;
+  background-color: #7DCE94;
 }
+
 
 .title {
   color: #fff;
