--- a/css/style2.css
+++ b/css/style2.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   height: 100%;
   width: 100%;
+  background-color: #7DCE94;
 }
 
 .container {
@@ -55,7 +56,6 @@ html, body {
 }
 
 
-
 .container2 {
   display: flex;
   justify-content: center;
@@ -69,18 +69,29 @@ html, body {
   align-items: center;
   justify-content: center;
   grid-row-start: 2;
-  width: 50%;
+  width: 75%;
   height: auto;
   grid-gap: 8%;
   margin-top: 5%;
 }
 
-
-.boxes {
+.innercontainer {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1.5em;
+  padding: 1%;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.boxes {
+  align-items: center;
+  justify-content: center;
+  padding: 1.2em;
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.4);
   text-align: center;
   font-family: arial;
@@ -88,6 +99,9 @@ html, body {
   border-radius: 24px;
   font-size: 18px;
   background-color: #fff;
+  margin-right: 20px;
+  width: 250px;
+  height: 150px;
 }
 
 .button-style {
@@ -120,5 +134,8 @@ html, body {
     justify-content: center;
     width: auto;
     height: auto;
+  }
+  .innercontainer {
+    display: grid;
   }
 }
