--- a/css/style2.css
+++ b/css/style2.css
@@ -139,3 +139,14 @@ html, body {
     display: grid;
   }
 }
+
+.back{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  background-color: none;
+  border-radius: 15px;
+}
