--- a/css/style3.css
+++ b/css/style3.css
@@ -116,3 +116,14 @@ a:hover {
 a:active {
   text-decoration: underline;
 }
+
+.back{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  background-color: none;
+  border-radius: 15px;
+}
