--- a/css/style4.css
+++ b/css/style4.css
@@ -66,3 +66,14 @@ html body {
   color: #000;
   border-bottom: 1px solid;
 }
+
+.back{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  background-color: none;
+  border-radius: 15px;
+}
