Update04. Fix css da homepage para mobile view.

--- a/css/style2.css
+++ b/css/style2.css
@@ -134,6 +134,7 @@ html, body {
     justify-content: center;
     width: auto;
     height: auto;
+    margin-bottom: 20px;
   }
   .innercontainer {
     display: grid;
