Update11. Fix navbar, imagens maiores.

--- a/css/style2.css
+++ b/css/style2.css
@@ -32,6 +32,7 @@ html, body {
   padding: 0;
   border: 1px solid #e7e7e7;
   background-color: #f3f3f3;
+  height: auto;
 }
 
 .list-style2 {
@@ -158,7 +159,7 @@ img{
 }
 
 p{
-  color: black; 
+  color: black;
   padding: 10px;
   z-index: 5;
   margin-top: 0;
