--- a/css/style2.css
+++ b/css/style2.css
@@ -39,6 +39,8 @@ html, body {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  width: auto;
+  height: 45px;
 }
 
 .link-style {
@@ -50,10 +52,13 @@ html, body {
   color: #000;
   font-family: arial;
   text-align: center;
+  width: auto;
 }
 
 .link-style:hover {
-  background-color: #ddd;
+  background-color: #f3f3f3;
+  height: 45px;
+  border-radius: 24px;
 }
 
 
