--- a/css/style3.css
+++ b/css/style3.css
@@ -6,6 +6,16 @@ html, body {
   background-color: #7DCE94;
 }
 
+.div-float{
+  text-align: center;
+  float: left;
+  width: 200px;
+  height: 150px;
+  margin: 1em;
+  background-color: #ccc;
+  border-radius: 10px;
+  }
+
 
 .title {
   color: #fff;
@@ -53,10 +63,11 @@ html, body {
 .quote3 {
   align-items: center;
   justify-content: center;
-  padding: 3em;
+  padding: 2em;
   border-radius: .3em;
   background-color: #fff;
   height: auto;
+  width: 700px;
   box-shadow: 10px 10px 30px rgba(0,0,0,0.3);
   border-radius: 20px;
 }
