--- a/css/style3.css
+++ b/css/style3.css
@@ -9,10 +9,10 @@ html, body {
 .div-float{
   text-align: center;
   float: left;
-  width: 200px;
-  height: 150px;
-  margin: 1em;
-  background-color: #ccc;
+  width: 550px;
+  height: 100px;
+  margin: 10px;
+  background-color: none;
   border-radius: 10px;
   }
 
@@ -67,13 +67,24 @@ html, body {
   border-radius: .3em;
   background-color: #fff;
   height: auto;
-  width: 700px;
+  width: 1000px;
   box-shadow: 10px 10px 30px rgba(0,0,0,0.3);
   border-radius: 20px;
 }
 
 .quote3:hover {
   box-shadow: 10px 10px 30px rgba(0,0,0,0.6);
+}
+
+.quote4 {
+  align-items: center;
+  justify-content: center;
+  padding: 2em;
+  border-radius: .3em;
+  background-color: none;
+  height: auto;
+  width: 1200px;
+  border-radius: 20px;
 }
 
 .align {
@@ -137,4 +148,12 @@ a:active {
   padding: 10px;
   background-color: none;
   border-radius: 15px;
+}
+
+img{
+  float: left;
+  height: 90px;
+  position:relative;
+  padding-left: 10px;
+  border-color: black;
 }
